@@ -58,6 +58,7 @@
     "Server port (restart needed)": "Порт сервера (требуется перезапуск)",
     "Reset the log file": "Очистить лог",
     "Reset log": "Очистить",
+    "Retry count for failed records": "Количество повторов при ошибке записи",
     "Do you want to delete all of your EPG data?": "Вы хотите удалить все данные EPG?",
     "Record name mask (valid placeholders: %date% and %title%, default: '%date% - %title%')": "Маска для имени записи (возможные шаблоны: %date% и %title%, по умолчанию: '%date% - %title%'", 
     "Record name mask must have at least one placeholder": "Маска для имени записи должна содержать как минимум один шаблон",
@@ -133,6 +134,7 @@
     "Invalid bind address, please check your settings": "Неправильный адрес сервера, пожалуйста проверьте настройки",
     "Invalid grab time, please check your settings": "Неверное время дня для импортирования EPG, пожалуйста проверьте настройки",
     "Invalid EPG zoom, please check your settings": "Неверный масштаб для EPG картинки, пожалуйста проверьте настройки",
+    "Invalid value, please enter a positive number or a zero": "Неверное значение. Пожалуйста введите положительное число или ноль",
     "Saving configuration...": "Конфигурация сохраняется...",
     
     "Set remote access password (leave blank for none)": "Задать пароль для удалённого доступа (оставить пустым для отмены)",
